Fix some language level oversteps